# clip-apple-silicon

./: README.md  clip-m1-clean.ipynb  clip-m1.ipynb  clip-silicon-fix.ipynb  clip_inference.py  pyproject.toml  test_clip_cifar100.py  test_image_features.py
